# roar_homework

./: README.md
backend/: .dockerignore  .editorconfig  Dockerfile  docker-compose.yml
backend/app/: pyproject.toml
backend/app/app/: settings.py  urls.py
backend/app/core/: models.py
backend/app/core/migrations/: 0001_initial.py
backend/scripts/: run.sh
