[tool.poetry]
name = "backend"
version = "0.1.0"
description = "For backend porject package control"
authors = ["as2229181 <as2229181@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
django = "3.2.18"
djangorestframework = ">=3.12.4,<3.13"
drf-spectacular = "^0.27.1"
celery = "^5.3.6"
django-redis = "^5.4.0"
django-celery-results = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
